bridge/base/0-frontend-sistema-de-peticiones-main-namespace.yaml
#! 0-frontend-sistema-de-peticiones-main-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: frontend-sistema-de-peticiones-main
    labels:
        com.docker.compose.project: frontend-sistema-de-peticiones-main
