bridge/base/sicier-app-deployment.yaml
#! sicier-app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sicier-app
    namespace: frontend-sistema-de-peticiones-main
    labels:
        com.docker.compose.project: frontend-sistema-de-peticiones-main
        com.docker.compose.service: sicier-app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: frontend-sistema-de-peticiones-main
            com.docker.compose.service: sicier-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: frontend-sistema-de-peticiones-main
                com.docker.compose.service: sicier-app
                com.docker.compose.network.sicier_net: "true"
        spec:
            containers:
                - name: sicier-app
                  image: j3ffer/sicier
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: sicier-app-8080
                      containerPort: 8080
