bridge/base/sicier-app-service.yaml
# check if there is at least one published port

#! sicier-app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: sicier-app-published
    namespace: frontend-sistema-de-peticiones-main
    labels:
        com.docker.compose.project: frontend-sistema-de-peticiones-main
        com.docker.compose.service: sicier-app
spec:
    selector:
        com.docker.compose.project: frontend-sistema-de-peticiones-main
        com.docker.compose.service: sicier-app
    ports:
        - name: sicier-app-8080
          port: 8080
          protocol: TCP
          targetPort: sicier-app-8080
