bridge/base/sicier-bd-expose.yaml
#! sicier-bd-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: sicier-bd
    namespace: frontend-sistema-de-peticiones-main
    labels:
        com.docker.compose.project: frontend-sistema-de-peticiones-main
        com.docker.compose.service: sicier-bd
spec:
    selector:
        com.docker.compose.project: frontend-sistema-de-peticiones-main
        com.docker.compose.service: sicier-bd
    ports:
        - name: sicier-bd-5432
          port: 5432
          targetPort: sicier-bd-5432
