bridge/base/sicier_net-network-policy.yaml
#! sicier_net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: sicier-net-network-policy
    namespace: frontend-sistema-de-peticiones-main
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.sicier_net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.sicier_net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.sicier_net: "true"
